# babyfoot

./: .env  .env.sample  .gitignore  CMakeLists.txt  Dockerfile  README.md  do  do.sh  docker  docker-compose.yml  entrypoint.sh  main.cpp  onepager
.devcontainer/: devcontainer.json
cmake/: x86_64-w64-mingw32-posix.cmake  x86_64-w64-mingw32.cmake
coverage/: report.sh
src/: CMakeLists.txt  camera.cpp  camera.hpp  game.cpp  game.hpp  game_object.cpp  game_object.hpp  input_handler.cpp  input_handler.hpp  light.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniformable.hpp
src/engine/: camera.cpp  camera.hpp  engine.cpp  engine.hpp  game.cpp  game.hpp  game_object.cpp  game_object.hpp  light.cpp  light.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniformable.hpp
src/engine/inputs/: input_handler.cpp  input_handler.hpp
src/engine/physics/: physics_processor.cpp  physics_processor.hpp
src/engine/physics/collision/: collision.cpp  collision.hpp  collision_processor.cpp  collision_processor.hpp
src/engine/physics/collision/inertia/: inertia_processor.cpp  inertia_processor.hpp
src/engine/physics/collision/resolver/: collision_resolver.cpp  collision_resolver.hpp
src/engine/physics/collision/triangle/: triangle_collision.cpp  triangle_collision.hpp
src/engine/physics/gravity/: gravity_processor.cpp  gravity_processor.hpp
src/engine/physics/rotation/: rotation_processor.cpp  rotation_processor.hpp
src/engine/physics/speed/: speed_processor.cpp  speed_processor.hpp
src/engine/render/: renderer.cpp  renderer.hpp
src/engine/render/drawing/: drawer.cpp  drawer.hpp
src/engine/scene/: scene.cpp  scene.hpp
src/engine/scene/object/: game_object.cpp  game_object.hpp
src/game/objects/: ball.cpp  ball.hpp  bulb.cpp  bulb.hpp  donut.cpp  donut.hpp  field.cpp  field.hpp  microsoft.cpp  microsoft.hpp  room.cpp  room.hpp
src/game/scenes/: soccer.cpp  soccer.hpp  test.cpp  test.hpp
src/models/: loaded_model.cpp  loaded_model.hpp  model.cpp  model.hpp  model_point.cpp  model_point.hpp  pyramid_model.cpp  pyramid_model.hpp  texture.cpp  texture.hpp
src/models/tests/: cube_model.cpp  cube_model.hpp  fancy_model.cpp  fancy_model.hpp  pyramid_model.cpp  pyramid_model.hpp
src/objects/: ball.cpp  ball.hpp  bulb.cpp  bulb.hpp  donut.cpp  donut.hpp  field.hpp  microsoft.cpp  microsoft.hpp
src/ressources/models/: donut.mtl  microsoft.blend
src/ressources/models/ball/: ball.mtl
src/ressources/models/donut/: donut.mtl
src/ressources/models/field/: field.mtl
src/ressources/models/lightbulb/: lightbulb.mtl
src/ressources/models/microsoft/: microsoft.mtl
src/ressources/models/room/: room.mtl
src/ressources/shaders/: fragment.fs  fragmentShaderTextureMultiple.fs  vertex.vs  vertexShaderMatrix.vs
src/scenes/: soccer.cpp  soccer.hpp  test.cpp  test.hpp  test_level.cpp  test_level.hpp
src/shaders/: fragmentShader.fs  fragmentShaderLightSource.fs  fragmentShaderTexture.fs  fragmentShaderTextureColor.fs  fragmentShaderTextureMultiple.fs  fragmentShaderYellow.fs  vertexShader.vs  vertexShaderLight.vs  vertexShaderLightSource.vs  vertexShaderMatrix.vs
src/window/: window.cpp  window.hpp
test/: CMakeLists.txt  main.test.cpp
test/engine/physics/: CMakeLists.txt
test/engine/physics/collision/triangle/: CMakeLists.txt  interval_overlap_check.test.cpp  plane_equation.test.cpp  planes_intersection_line_equation.test.cpp  projection_point_on_line.test.cpp  same_sign.test.cpp  scalar_projection_point_on_line.test.cpp  should_not_collide.txt  signed_distance_from_plane.test.cpp  solve_equations.test.cpp  triangle_collision.plane_equation.test.cpp  triangle_collision.planes_intersection_line_equation.test.cpp  triangle_collision.same_sign.test.cpp  triangle_collision.signed_distance_from_plane.test.cpp  triangle_collision.solve_equations.test.cpp  triangle_collision.test.cpp
